site-files/static/css/app.css
body {
	background-color: #eee;
}

#site-title {
    font-size: 14px;
    margin-top: 0;
}

#site-title a {
    color: #111;
    font-size: 30px;
    font-weight: bold;
    line-height: 36px;
    text-decoration: none;
}

#site-description {
    color: #7a7a7a;
    font-size: 14px;
    margin: 0;
}

#site-nav {
    min-height: inherit;
    border-radius: 0px;
}

#site-nav-items>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
}

#pageHeading {
	margin-top: 2em;
	padding-left: 0px;
	padding-right: 0px;
    border-top: 2px solid #bbb;
}

#pageHeading hgroup {
    margin: 4%;
}

.pageContent {
	background-color: #fff;
}

.pageFooter {
    margin-bottom: 40px;
}

.other-form-control {
	display: none;
}

.required-asterisk {
	font-size: 10px;
    color: rgb(196,59,29);
}

.required-error {
    border: 2px solid rgb(196,59,29);
}


/* ---- about ---- */

.aboutContent {
    padding: 1.625em 0 0;
}

.aboutContent > p {
    margin-bottom: 1.625em;
}

.hoursTable {
    width: 100%;
    margin: 0 0 1.625em;
    border-bottom: 1px solid #ddd;
}


/* ---- get involved ---- */

#getInvolved .nav-tabs {
    max-width: 740px;
    margin: auto;
}

.tab-content .tab-pane {
    max-width: 700px;
    margin: auto;
}


/* ---- shift sign-up ---- */

#shop-schedule {
	width:inherit;
}

.signup-form {
	border: 1px solid #ccc;
	border-color: rgb(176,190,197);
	border-radius: 6px;
	background-color: rgb(255,255,255);
    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
    box-sizing: border-box;
    margin: 25px auto;
    padding: 20px;
    max-width: 700px;
    min-width: 280px;
    width: 100%;
}

.shiftSignupFormHdr {
	border-top: 1px solid #ddd;
    padding-top: 20px;
    margin-top: 20px;
}

.signup-form input {
	max-width: 325px;
}

.signup-form div.first-checkbox {
	margin-top: 0px;
}

.shiftRow {
	display: table-row;
}

.shiftDay {
	display: table-cell;
	border: 1px solid;
    height: 94px;
    width: 94px;
    text-align: center;
    vertical-align: top;
}

.shiftDay.closed {
	background-color: #eee;
}

.shiftDayHeading {
	font-weight:bold;
}


/* ---- store ---- */

#dlgBikeDetails {
    display: none;
}

#storeTemplates {
    display: none;
}

#storeInventory {
    text-align: center;
    padding-bottom: 20px;
}

.storeBike {
    display: inline-block;
    margin: 10px 10px;
    cursor: pointer;
}

.storeBikeTitle {
    text-align: center;
    padding-top: 10px;
}

.bikePrice {
    position: absolute;
    right: 15px;
    top: 10px;
}

.bikePrice > span {
    font-size: 1.2em;
    background-color: green;
    padding: 8px 12px;
}

.bikeImage {
    text-align: center;
}

.bikeDescription {
    padding: 25px 30px 5px;
}

